[gd_scene load_steps=8 format=3 uid="uid://b28mtwvia2eg8"]

[ext_resource type="Script" path="res://main.gd" id="1_7magf"]
[ext_resource type="PackedScene" uid="uid://07ncclbex3lo" path="res://mob.tscn" id="2_nq21a"]
[ext_resource type="PackedScene" uid="uid://bf3lh6lcsx03p" path="res://player.tscn" id="3_re0u4"]
[ext_resource type="PackedScene" uid="uid://1eeemy18wgha" path="res://hud.tscn" id="4_kelwx"]
[ext_resource type="AudioStream" uid="uid://dx5bb7ismamtt" path="res://art/house-in-a-forest-loop.ogg" id="5_l3dr6"]
[ext_resource type="AudioStream" uid="uid://c56s14gfmls6j" path="res://art/game-over.wav" id="6_ksvk0"]

[sub_resource type="Curve2D" id="Curve2D_4ylfu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_7magf")
mobScene = ExtResource("2_nq21a")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(0.2204, 0.37202, 0.38, 1)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_4ylfu")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="Player" parent="." instance=ExtResource("3_re0u4")]
position = Vector2(-160, 80)

[node name="HUD" parent="." instance=ExtResource("4_kelwx")]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 388)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_l3dr6")
volume_db = -9.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ksvk0")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="hit" from="Player" to="." method="gameOver"]
[connection signal="startGame" from="HUD" to="." method="newGame"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
